# hangman

./: hangman.cabal
.stack-work/: stack.sqlite3
.stack-work/ghci/40eaffff/: cabal_macros.h
.stack-work/ghci/68a2eb57/: cabal_macros.h
.stack-work/ghci/69eff25a/: cabal_macros.h
.stack-work/ghci/6e030ed7/: cabal_macros.h
.stack-work/ghci/9cf3282e/: cabal_macros.h
.stack-work/ghci/ab7ef1d2/: cabal_macros.h
.stack-work/ghci/b6dc8267/: cabal_macros.h
.stack-work/ghci/d4ea6544/: cabal_macros.h
.stack-work/install/d75deebd/lib/x86_64-windows-ghc-9.0.2/hangman-0.1.0.0-1msQXbbfs022Px6y6uuUTp/Hangman/: Cli.hi  Logic.hi  Puzzle.hi  Render.hi  Types.hi  Words.hi
.stack-work/install/d75deebd/lib/x86_64-windows-ghc-9.0.2/hangman-0.1.0.0-6Y5aKLh0lLhDlOqMHo79Ns/Hangman/: Cli.hi  Logic.hi  Puzzle.hi  Render.hi  Types.hi  Words.hi
.stack-work/install/d75deebd/lib/x86_64-windows-ghc-9.0.2/hangman-0.1.0.0-7OSPbTc0Cpi2xxOl3XCxUb/Hangman/: Cli.hi  Logic.hi  Puzzle.hi  Render.hi  Types.hi  Util.hi  Words.hi
.stack-work/install/d75deebd/pkgdb/: hangman-0.1.0.0-7OSPbTc0Cpi2xxOl3XCxUb.conf  package.cache
app/: Main.hs
data/: dict.txt  dict.txt.bak
src/Hangman/: Cli.hs  Logic.hs  Puzzle.hs  Render.hs  Types.hs  Util.hs  Words.hs
