name:                hangman
version:             0.1.0.0
synopsis:            Jugar ahorcado con palabras en español
-- description:
homepage:            https://github.com/githubuser/hangman#readme
license:             BSD3
license-file:        LICENSE
author:              Omar Ponce
maintainer:          omar.ponce@gmail.com
copyright:           2022 Omar Ponce
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md
                     CHANGELOG.md

executable hangman-cli
  hs-source-dirs:      app
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , hangman
                     , mtl
  ghc-options:         -Wall

library
  hs-source-dirs:      src
  build-depends:       base >= 4.7 && < 5
                     , random
                     , split
                     , transformers
  default-language:    Haskell2010
  exposed-modules:     Hangman.Puzzle
                     , Hangman.Cli
                     , Hangman.Words
                     , Hangman.Util
  other-modules:       Hangman.Logic
                     , Hangman.Types
                     , Hangman.Render
